--- a/.gitmodules
+++ b/.gitmodules
@@ -28,3 +28,12 @@
 [submodule "roles/configure_ntp"]
 	path = roles/configure_ntp
 	url = https://github.com/glillico/ansible-role-configure_ntp.git
+[submodule "roles/reboot_server"]
+	path = roles/reboot_server
+	url = https://github.com/glillico/ansible-role-reboot_server.git
+[submodule "roles/regenerate_ssh_host_keys"]
+	path = roles/regenerate_ssh_host_keys
+	url = https://github.com/glillico/ansible-role-regenerate_ssh_host_keys.git
+[submodule "roles/sync_sudo"]
+	path = roles/sync_sudo
+	url = https://github.com/glillico/ansible-role-sync_sudo.git
